create branch, update file

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;300&display=swap');
-
 * {
   margin: 0;
   padding: 0;
   font-family: 'Raleway', sans-serif;
+
   font-size: 20px;
 }
 
@@ -11,14 +11,15 @@ body {
   background-color: #eee;
 }
 
-.wrapper {
-  border-radius: 20px 20px;
+.card {
   display: flex;
   flex-direction: column;
   width: 75%;
   margin: 10rem auto;
   padding: 20px;
   background-color: #fff;
+  border-radius: 20px  20px;
+  padding: 5%;
 }
 
 .head {
@@ -43,6 +44,7 @@ body {
 
 input {
   border: none;
+  outline: none;
 }
 
 input[type="text"]:focus {
